Allow setting publish repo dir as param

--- a/build.publishing.gradle
+++ b/build.publishing.gradle
@@ -8,7 +8,7 @@ subprojects {
             repositories {
                 maven {
                     name = 'buildDir'
-                    url = "file://$rootProject.buildDir/repo"
+                    url = "file://${rootProject.file(cfg.publishDir)}"
                 }
             }
 
