--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,11 @@ plugins {
     id 'com.github.alisiikh.scalastyle_2.11' version '2.1.0'  apply false
 }
 
+task dummy1 {
+    group 'dummy'
+    description 'dummy'
+}
+
 apply from: 'build.params.gradle'
 
 allprojects {
