Use javadoc classifier for scaladoc jars Co-Authored-By: Tobias Johansson <tobias.johansson@neotechnology.com>

--- a/build.gradle
+++ b/build.gradle
@@ -74,7 +74,7 @@ subprojects {
 
     task docJar(type: Jar) {
         dependsOn tasks.scaladoc
-        classifier = 'docs'
+        classifier = 'javadoc'
         from(tasks.scaladoc.destinationDir)
     }
 
