Add gradle module

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,6 +8,7 @@ include(':okapi-logical')
 include(':okapi-relational')
 include(':okapi-tck')
 include(':okapi-trees')
+include(':okapi-parser')
 include(':spark-cypher')
 include(':spark-cypher-examples')
 include(':spark-cypher-tck')
