--- a/build.publishing.gradle
+++ b/build.publishing.gradle
@@ -14,6 +14,12 @@ subprojects {
 
             dev(MavenPublication) {
                 from components.java
+
+                afterEvaluate {
+                    ['sourceJar']
+                            .findResults { tasks.findByName(it) }
+                            .each { artifact it }
+                }
             }
 
             full(MavenPublication) {
