--- a/build.licenses.gradle
+++ b/build.licenses.gradle
@@ -120,6 +120,8 @@ subprojects {
         }
     }
 
+    tasks.downloadLicenses.outputs.upToDateWhen { false }
+
     tasks.downloadLicenses.ext.licencesJson = { ->
         def jsonDir = tasks.downloadLicenses.jsonDestination
         def jsonFile = file("$jsonDir/license-dependency.json")
