--- a/settings.gradle
+++ b/settings.gradle
@@ -13,3 +13,4 @@ include(':spark-cypher-examples')
 include(':spark-cypher-tck')
 include(':spark-cypher-testing')
 include(':graph-ddl')
+include(':documentation')
