Add micro benchmarks for join performance on different data types
Co-authored-by: Philip Stutz <philip.stutz@gmail.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,6 @@ include(':spark-cypher')
 include(':spark-cypher-examples')
 include(':spark-cypher-tck')
 include(':spark-cypher-testing')
+include(':spark-cypher-jmh')
 include(':graph-ddl')
 include(':documentation')
