--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.github.hierynomus.license'       version '0.15.0' apply false
     id 'com.github.johnrengelman.shadow'     version '4.0.3'  apply false
     id 'com.github.alisiikh.scalastyle_2.11' version '2.1.0'  apply false
+    id 'me.champeau.gradle.jmh'              version '0.4.8'  apply false
 }
 
 apply from: 'build.params.gradle'
