--- a/build.licenses.gradle
+++ b/build.licenses.gradle
@@ -62,6 +62,7 @@ def whitelist = [
                 [name: 'Mozilla Public License, v. 2.0', url: 'http://mozilla.org/MPL/2.0/']
         ]],
         [name: 'CDDL-1.1+GPL-2.0+CPE', url: 'https://javaee.github.io/glassfish/LICENSE', aliases: [
+                [name: 'CDDL'],
                 [name: 'CDDL + GPLv2 with classpath exception'],
                 [name: 'CDDL 1.1', url: 'https://glassfish.java.net/public/CDDL+GPL_1_1.html'],
                 [name: 'CDDL 1.1', url: 'https://glassfish.dev.java.net/public/CDDL+GPL_1_1.html'],
