Change group id for documentation artifacts subproject
Group id for docs is now `org.opencypher.documentation` and this
subproject does not produce jar, sources-jar, tests-jar or
javadoc-jar anymore (these were empty anyway).

The new group id enables filtering the artifacts away from the
real code artifacts.

Co-authored-by: Tobias Johansson <tobias.johansson@neotechnology.com>
Co-authored-by: Jonatan Jäderberg <jonatan.jaderberg@gmail.com>

--- a/build.publishing.gradle
+++ b/build.publishing.gradle
@@ -47,13 +47,17 @@ subprojects {
                 from components.java
 
                 afterEvaluate {
-                    ['sourceJar',
-                     'docJar',
-                     'testJar',
-                     'asciidocJar',
-                     'shadowJar']
+                    def included = [
+                            'jar',
+                            'sourceJar',
+                            'docJar',
+                            'testJar',
+                            'asciidocJar',
+                            'shadowJar'
+                    ]
+                    artifacts = included
                             .findResults { tasks.findByName(it) }
-                            .each { artifact it }
+                            .findAll { it.enabled }
                 }
 
                 pom {
