Add tasks for aggregated scaladoc

--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ subprojects {
         useJUnit()
     }
 
-    def scalacParameters = [
+    ext.scalacParameters = [
             "-target:jvm-$ver.jvm".toString(),
             '-unchecked',
             '-deprecation',
