--- a/spark-cypher-jmh/build.gradle
+++ b/spark-cypher-jmh/build.gradle
@@ -3,6 +3,8 @@ apply plugin: 'me.champeau.gradle.jmh'
 description = 'Micro benchmarks for Cypher for Apache Spark'
 
 dependencies {
+    compile project(':spark-cypher')
+
     compile (group: 'org.apache.spark', name: "spark-core".scala(),     version: ver.spark) {
         exclude group: 'org.slf4j', module: 'slf4j-log4j12'
     }
@@ -12,4 +14,8 @@ dependencies {
     compile (group: 'org.apache.spark', name: "spark-catalyst".scala(), version: ver.spark) {
         exclude group: 'org.slf4j', module: 'slf4j-log4j12'
     }
+}
+
+jmh {
+    //include = ['.*Concat.*']
 }
