--- a/okapi-neo4j-io-testing/build.gradle
+++ b/okapi-neo4j-io-testing/build.gradle
@@ -5,5 +5,7 @@ dependencies {
     compile project(':okapi-neo4j-io')
     compile project(':okapi-testing')
 
-    compile group: 'org.neo4j.test', name: 'neo4j-harness', version: ver.neo4j.main
+    compile group: 'org.neo4j.test',   name: 'neo4j-harness',            version: ver.neo4j.main
+    compile group: 'org.neo4j.test',   name: 'neo4j-harness-enterprise', version: ver.neo4j.main
+    compile group: 'org.bouncycastle', name: 'bctls-jdk15on',            version: ver.bctls
 }
