Exclude additional scala dependencies from cluster fat jar
Co-authored-by: Sören Reichardt <soren.reichardt@neotechnology.com>

--- a/spark-cypher/build.gradle
+++ b/spark-cypher/build.gradle
@@ -19,6 +19,7 @@ shadowJar {
 
     dependencies {
         exclude(dependency('org.scala-lang:'))
+        exclude(dependency('org.scala-lang.modules:'))
     }
     exclude "META-INF/versions/**/*"
 }
